<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:layout_margin="12dp">

    <EditText
        android:id="@+id/login_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/login"
        android:imeOptions="actionNext" />

    <Button
        android:id="@+id/begin_quiz_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/local_quizzes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="6dp"
        android:text="@string/goto_quiz"
        android:onClick="takeQuiz" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topic_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        android:background="?android:attr/selectableItemBackground" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/begin_quiz_btn"
        android:text="@string/no_quizzes_found"
        android:padding="4dp"
        android:textAlignment="center"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/midvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/local_quizzes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/local_quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/midvert"
        app:layout_constraintBottom_toTopOf="@id/create_quiz"
        android:onClick="setLocal" />

    <Button
        android:id="@+id/create_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/create_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/midvert"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="createQuiz" />

    <Button
        android:id="@+id/online_quizzes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/online_quiz"
        app:layout_constraintLeft_toLeftOf="@id/midvert"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_quiz"
        android:onClick="setOnline" />

    <Button
        android:id="@+id/edit_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/edit_quiz"
        app:layout_constraintLeft_toLeftOf="@id/midvert"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="editQuiz" />

</androidx.constraintlayout.widget.ConstraintLayout>